--- a/angular.json
+++ b/angular.json
@@ -15,6 +15,7 @@
           "options": {
             "outputPath": "dist/dreamx-app",
             "index": "src/index.html",
+            "baseHref": "/gamx/",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
