--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:dreamx-app": "node dist/dreamx-app/server/server.mjs"
+    "serve:ssr:dreamx-app": "node dist/dreamx-app/server/server.mjs",
+    "github-build": "ng build --configuration production --base-href 'https://github.com/haidermast-design/gamx/'",
+    "github-deploy": "npx angular-cli-ghpages --dir=dist/<repository-name>/browser --no-silent"
   },
   "private": true,
   "dependencies": {
